Controller liefert die Management-Daten über UDP an den Master.
git-svn-id: svn://localhost/twospot_svn/trunk@1064 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Master/.classpath
+++ b/Master/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="lib" path="/Util/etc"/>
+	<classpathentry kind="lib" path="/Libs/gen/google-protobuf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
