UDP-Ports und Adressen werden über die Konfigurationsdateien geladen. Controller lädt die Adresse vom Masetr über den Zookeeper.
git-svn-id: svn://localhost/twospot_svn/trunk@1066 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -8,7 +8,7 @@ rmi.registry.port=2299
 
 # Master
 zk.master.networkInterface=eth3
-
+master.datagramPort=3231
 
 # Frontend
 http.frontend.port=6060
@@ -17,6 +17,7 @@ http.frontend.interface=0.0.0.0
 
 # Controller
 rmi.controller.registry.port=2298
+controller.datagramPort=3230
 http.controller.port=8080
 http.controller.interface=0.0.0.0
 zk.controller.networkInterface=eth3
