--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -66,5 +66,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/slf4j/slf4j-log4j12-1.5.10.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/google-protobuf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
