--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -59,5 +59,6 @@
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar" sourcepath="/Util"/>
 	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/google-protobuf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
