--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -24,9 +24,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/el-api.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jsp-api.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/tomcat-juli.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-el.jar"/>
@@ -63,9 +60,12 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-servlet-7.0.1.v20091125.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-servlets-7.0.1.v20091125.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-util-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-webapp-7.0.1.v20091125.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-webapp-7.0.1.v20091125.jar" sourcepath="D:/work/jetty7src/jetty/jetty-webapp/src/main/java"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-websocket-7.0.1.v20091125.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-xml-7.0.1.v20091125.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
