--- a/Portal/portal/WEB-INF/web.xml
+++ b/Portal/portal/WEB-INF/web.xml
@@ -16,17 +16,12 @@
         </param-value>
 	</context-param>
 
-	<filter>
-		<filter-name>AccessFilter</filter-name>
+	<!--
+		<filter> <filter-name>AccessFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>AccessFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-
+		</filter> <filter-mapping> <filter-name>AccessFilter</filter-name>
+		<url-pattern>/*</url-pattern> </filter-mapping>
+	-->
 	<servlet>
 		<servlet-name>springapp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -41,5 +36,15 @@
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+
+	<error-page>
+		<exception-type>java.lang.Exception</exception-type>
+		<location>error404.html</location>
+	</error-page>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>error404.html</location>
+	</error-page>
 
 </web-app>
