--- a/gogo/WEB-INF/web.xml
+++ b/gogo/WEB-INF/web.xml
@@ -19,4 +19,8 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+	<error-page>
+		<error-code>404</error-code>
+		<location>http://www.andmedia.de</location>
+	</error-page>
 </web-app>
