Die Sequence-Counters durch shardened counters ersetzt. Ansonsten kommt es bei einer hohen Write-Belastung Wartezeiten.
git-svn-id: svn://localhost/twospot_svn/trunk@1122 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/TwoSpotJdo/build.xml
+++ b/TwoSpotJdo/build.xml
@@ -9,7 +9,7 @@
 	<property name="src" value="./src" />
 	<property name="build" value="./build" />
 
-	<target name="prepare">
+	<target name="prepare" depends="cleanup">
 		<mkdir dir="${build}" />
 	</target>
 
