--- a/AppServer/build.xml
+++ b/AppServer/build.xml
@@ -33,7 +33,7 @@
 			classname="org.datanucleus.enhancer.tools.EnhancerTask" />
 
 		<enhance classpathref="enhancer.classpath" failonerror="true"
-			verbose="true">
+			verbose="false">
 			<jvmarg line="-Dlog4j.configuration=${log4j.config.file}" />
 
 			<fileset dir="./build">
