--- a/gogo/WEB-INF/web.xml
+++ b/gogo/WEB-INF/web.xml
@@ -21,6 +21,6 @@
 
 	<error-page>
 		<error-code>404</error-code>
-		<location>http://www.andmedia.de</location>
+		<location>error404.html</location>
 	</error-page>
 </web-app>
