--- a/gwiki/WEB-INF/web.xml
+++ b/gwiki/WEB-INF/web.xml
@@ -37,6 +37,6 @@
 
 	<error-page>
 		<error-code>404</error-code>
-		<location>error404.html</location>
+		<location>/error404.html</location>
 	</error-page>
 </web-app>
