--- a/Portal/portal/WEB-INF/web.xml
+++ b/Portal/portal/WEB-INF/web.xml
@@ -16,12 +16,16 @@
         </param-value>
 	</context-param>
 
-	<!--
-		<filter> <filter-name>AccessFilter</filter-name>
+
+	<filter>
+		<filter-name>AccessFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		</filter> <filter-mapping> <filter-name>AccessFilter</filter-name>
-		<url-pattern>/*</url-pattern> </filter-mapping>
-	-->
+	</filter>
+	<filter-mapping>
+		<filter-name>AccessFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>springapp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
