--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -67,5 +67,11 @@
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/libsigar-amd64-linux.so"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/libsigar-ia64-linux.so"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-amd64-winnt.dll"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.dll"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.lib"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
