--- a/Frontend/build.xml
+++ b/Frontend/build.xml
@@ -19,7 +19,7 @@
 	</target>
 
 	<target name="build" depends="prepare">
-		<javac srcdir="${src}" destdir="${build}">
+		<javac srcdir="${src}" destdir="${build}" debug="true">
 			<classpath refid="classpath" />
 		</javac>
 
