--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -10,6 +10,9 @@ rmi.registry.port=2299
 zk.master.networkInterface=eth3
 master.datagramPort=3231
 
+slb.instance.cpuLimit=0.50
+slb.instance.overloadLimit=0.50
+
 # Frontend
 http.frontend.port=6060
 http.frontend.interface=0.0.0.0
