SystemStats vom Controller in die Utils verschoben
git-svn-id: svn://localhost/twospot_svn/trunk@1191 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -12,6 +12,9 @@ master.datagramPort=3231
 
 slb.instance.cpuLimit=0.50
 slb.instance.overloadLimit=0.50
+slb.controller.minIdleTime=0.05
+slb.controller.totalCpuUnits=30
+slb.controller.guranteedCpuUnits=2
 
 # Frontend
 http.frontend.port=6060
