--- a/Util/.classpath
+++ b/Util/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-webapp-7.0.1.v20091125.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-continuation-7.0.1.v20091125.jar" sourcepath="D:/work/jetty7src/jetty/jetty-continuation/src/main/java"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.1/jetty-server-7.0.1.v20091125.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
