--- a/Util/build.xml
+++ b/Util/build.xml
@@ -22,7 +22,7 @@
 		<exec executable="protoc">
 			<arg value="-I=${src}" />
 			<arg value="--java_out=${src}" />
-			<arg value="${src}/test.proto" />
+			<arg value="${src}/management.proto" />
 		</exec>
 	</target>
  
