Properties-File dokumentiert
git-svn-id: svn://localhost/twospot_svn/trunk@1195 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -10,10 +10,19 @@ rmi.registry.port=2299
 zk.master.networkInterface=eth3
 master.datagramPort=3231
 
-slb.instance.cpuLimit=0.50
+# Number of AppServers in % which must be overloaded until a new AppServer is created
 slb.instance.overloadLimit=0.50
+
+# Maximum CPU usage until the application is overloaded
+slb.instance.cpuLimit=0.50
+
+# Minimum CPU idle time in %
 slb.controller.minIdleTime=0.05
+
+# Number of CPU units if CPU-Bursting is used
 slb.controller.totalCpuUnits=30
+
+# Number of CPU units which are guaranteed to the application
 slb.controller.guranteedCpuUnits=2
 
 # Frontend
