Kommentar im Util-Buildfile, dass der ProtoBuf-Compiler benötigt wird
git-svn-id: svn://localhost/twospot_svn/trunk@1789 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/build.xml
+++ b/Util/build.xml
@@ -18,6 +18,7 @@
 		<delete dir="${build}" />
 	</target>
 
+	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->  
 	<target name="protoc">
 		<exec executable="protoc">
 			<arg value="-I=${src}" />
