--- a/gwiki/build.xml
+++ b/gwiki/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="all" name="GoGo">
+<project basedir="." default="all" name="GWiki">
 
 	<property name="src" value="./src" />
 	<property name="dest" value="./WEB-INF/classes" />
