--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -73,5 +73,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.dll"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.lib"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/winstone-0.9.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
