Buildfile vom ProtoBuf führt jetzt auch den protoc aus
git-svn-id: svn://localhost/twospot_svn/trunk@1897 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/ProtoBuf/build.xml
+++ b/ProtoBuf/build.xml
@@ -17,10 +17,19 @@
 		<delete dir="${build}" />
 	</target>
 
-	<target name="build" depends="prepare">
+	<target name="build" depends="prepare,protoc">
 		<javac srcdir="${src}" destdir="${build}" debug="true">
 			<classpath refid="classpath" />
 		</javac>
+	</target>
+
+	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->
+	<target name="protoc">
+		<exec executable="protoc">
+			<arg value="-I=${src}" />
+			<arg value="--java_out=${src}" />
+			<arg value="${src}/management.proto" />
+		</exec>
 	</target>
 
 	<target name="package" depends="build">
