--- a/ProtoBuf/build.xml
+++ b/ProtoBuf/build.xml
@@ -28,7 +28,7 @@
 		<exec executable="protoc">
 			<arg value="-I=${src}" />
 			<arg value="--java_out=${src}" />
-			<arg value="${src}/management.proto" />
+			<arg value="${src}/descriptor.proto" />
 		</exec>
 	</target>
 
