--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -69,5 +69,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.dll"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.lib"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
