Parameter von Winstone leicht modifiziert. Startup wird gegenüber Jetty aber nicht wesentlich beschleunigt.
git-svn-id: svn://localhost/twospot_svn/trunk@1927 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -10,7 +10,7 @@ appserver.classpath.prefix=.
 appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
 
 # JVM options used to start the AppServer (Seperated by a whitespace)
-appserver.vm.options=-client -Xms10m -Xmx50m
+appserver.vm.options=-client -Xms80M -Xmx150M
 
 # FileServer connection details
 fileserver.url=http://jack3:5050
