Neue createCommand-Funktion um den jsCppServer zu starten
git-svn-id: svn://localhost/twospot_svn/trunk@1951 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -39,8 +39,8 @@ zk.controller.networkInterface=eth3
 
 
 # AppServer
-python.lib=C:/jython2.5.1/Lib
-python.lib.site-packages=C:/jython2.5.1/Lib/site-packages
+python.lib=C:/jython/Lib
+python.lib.site-packages=C:/jython/Lib/site-packages
 
 
 # Fileserver
