Teile vom AppServer Lifecycle in den Controller verschoben
git-svn-id: svn://localhost/twospot_svn/trunk@2012 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.project
+++ b/Controller/.project
@@ -21,11 +21,17 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>net.sourceforge.metrics.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.python.pydev.pythonNature</nature>
 		<nature>org.datanucleus.ide.eclipse.projectnature</nature>
+		<nature>net.sourceforge.metrics.nature</nature>
 	</natures>
 </projectDescription>
