--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -70,5 +70,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.lib"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5.jar" sourcepath="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
