AppConfigurer hat den InputStream nicht geschlossen. Da diese Methode jetzt im Controller verwendet wird, wird der Steram nicht automatisch durch das Beenden vom AppServer-Prozess geschlossen. Das Verzeichnis konnte nicht gelöscht werden!
git-svn-id: svn://localhost/twospot_svn/trunk@2032 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -12,6 +12,8 @@ appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
 # JVM options used to start the AppServer (Seperated by a whitespace)
 appserver.vm.options=-client -Xms80M -Xmx150M
 
+twospotv8.bin=D:/work/mscWolke/trunk/devcMP/TwoSpotV8/Debug/TwoSpotV8.exe
+
 # FileServer connection details
 fileserver.url=http://jack3:5050
 
