UserService läuft jetzt über ProtoBuf-RPC
git-svn-id: svn://localhost/twospot_svn/trunk@2042 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -71,5 +71,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5.jar" sourcepath="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5-sources.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/protobuf-socket-rpc-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
