--- a/Controller/build.xml
+++ b/Controller/build.xml
@@ -11,6 +11,15 @@
 	<property name="etc" value="./etc" />
 	<property name="build" value="./build" />
 
+	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->
+	<target name="protoc">
+		<exec executable="protoc">
+			<arg value="-I=./src" />
+			<arg value="--java_out=./src" />
+			<arg value="./src/protoc/services.proto" />
+		</exec>
+	</target>
+
 	<target name="prepare">
 		<mkdir dir="${build}" />
 	</target>
