--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -8,8 +8,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5.jar" sourcepath="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5-sources.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jython-2.5.1/jython.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-core.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache-cli-1.2/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/asm-3.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/ehcache-1.1.jar"/>
@@ -27,10 +25,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jsp-api.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/tomcat-juli.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-el.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-beans.jar" sourcepath="/Libs/lib/spring-framework-2.5.6.SEC01/spring-sources.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context.jar" sourcepath="D:/work/mscNotes/3party/src"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-web.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-webmvc.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/h2-1.2.123/h2-1.2.123.jar"/>
@@ -74,5 +68,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar-x86-winnt.lib"/>
 	<classpathentry kind="lib" path="/Libs/lib/sigar/sigar.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/winstone-0.9.10.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar" sourcepath="D:/work/mscNotes/3party/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/protobuf-socket-rpc-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
