--- a/AppServer/etc/etc/log4j.properties
+++ b/AppServer/etc/etc/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = INFO, Rolling
+log4j.rootLogger = INFO, SocketAppender
 
 log4j.appender.SocketAppender=org.apache.log4j.net.SocketAppender
 log4j.appender.SocketAppender.Port=4445
