--- a/Portal/.classpath
+++ b/Portal/.classpath
@@ -5,6 +5,13 @@
 	<classpathentry kind="lib" path="portal/WEB-INF/lib/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="portal/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="portal/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-core.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-web.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-webmvc.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-aop.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-beans.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-context-support.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/spring-context.jar"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -24,10 +31,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jpa-2.0.0-m3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-core.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-web.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-webmvc.jar" sourcepath="D:/work/mscNotes/3party/src"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar" sourcepath="D:/work/mscNotes/3party/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/el-api.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
