--- a/AppServer/etc/etc/log4j.properties
+++ b/AppServer/etc/etc/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootLogger = INFO, SocketAppender
+log4j.rootLogger = INFO, Rolling
 
-log4j.appender.SocketAppender=org.apache.log4j.net.SocketAppender
-log4j.appender.SocketAppender.Port=4445
-log4j.appender.SocketAppender.RemoteHost=localhost
+#log4j.appender.SocketAppender=org.apache.log4j.net.SocketAppender
+#log4j.appender.SocketAppender.Port=4445
+#log4j.appender.SocketAppender.RemoteHost=localhost
 
 log4j.appender.Rolling=org.apache.log4j.RollingFileAppender
 log4j.appender.Rolling.File=appserver.log
