Buildfile vom Util greift auf die protoc-Binary im ProtoBuf-Projekt zurück
git-svn-id: svn://localhost/twospot_svn/trunk@2063 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/build.xml
+++ b/Util/build.xml
@@ -18,9 +18,10 @@
 		<delete dir="${build}" />
 	</target>
 
-	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->  
+	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->
+	<!-- Binary is located in the ProtoBuf project -->
 	<target name="protoc">
-		<exec executable="protoc">
+		<exec executable="../ProtoBuf/protoc">
 			<arg value="-I=${src}" />
 			<arg value="--java_out=${src}" />
 			<arg value="${src}/management.proto" />
