Pfad zum ProtoBuf richtiggestellt
git-svn-id: svn://localhost/twospot_svn/trunk@2073 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/ProtoBuf/build.xml
+++ b/ProtoBuf/build.xml
@@ -25,7 +25,7 @@
 
 	<!-- ATTENTION: Requires the Google ProtoBuf-Compiler (http://code.google.com/p/protobuf/) -->
 	<target name="protoc">
-		<exec executable="./protoc">
+		<exec executable="../ProtoBuf/protoc">
 			<arg value="-I=${src}" />
 			<arg value="--java_out=${src}" />
 			<arg value="${src}/descriptor.proto" />
